--- a/DailyDiary/App.config
+++ b/DailyDiary/App.config
@@ -1,6 +1,75 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DailyDiary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+    </providers>
+  </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+  </system.data>
+  <userSettings>
+    <DailyDiary.Properties.Settings>
+      <setting name="s_dayColor" serializeAs="String">
+        <value>LightGray</value>
+      </setting>
+      <setting name="s_sundayColor" serializeAs="String">
+        <value>Red</value>
+      </setting>
+      <setting name="s_mainBackgroundColor" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="s_textboxBackgroundColor" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="s_textColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_night_MainBackgroundColor" serializeAs="String">
+        <value>DarkGray</value>
+      </setting>
+      <setting name="s_night_TextboxBackgroundColor" serializeAs="String">
+        <value>Gray</value>
+      </setting>
+      <setting name="s_night_TextColor" serializeAs="String">
+        <value>Gainsboro</value>
+      </setting>
+      <setting name="s_night_DayColor" serializeAs="String">
+        <value>64, 64, 64</value>
+      </setting>
+      <setting name="s_night_SundayColor" serializeAs="String">
+        <value>255, 128, 0</value>
+      </setting>
+      <setting name="s_dayTextColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_night_DayTextColor" serializeAs="String">
+        <value>Gainsboro</value>
+      </setting>
+      <setting name="s_textboxLightCursor" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_PanelClosed" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_textboxLightCursorNightOnly" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </DailyDiary.Properties.Settings>
+  </userSettings>
 </configuration>
