--- a/DailyDiary/App.config
+++ b/DailyDiary/App.config
@@ -70,6 +70,9 @@
       <setting name="s_textboxLightCursorNightOnly" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="s_SingleUserMode" serializeAs="String">
+        <value>False</value>
+      </setting>
     </DailyDiary.Properties.Settings>
   </userSettings>
 </configuration>
