--- a/DailyDiary/Properties/Settings.settings
+++ b/DailyDiary/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="s_textboxLightCursorNightOnly" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="s_SingleUserMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
