--- a/DailyDiary/Properties/Settings.settings
+++ b/DailyDiary/Properties/Settings.settings
@@ -50,5 +50,11 @@
     <Setting Name="s_SingleUserMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="s_AskBeforeChange" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="s_SingleUserUsername" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
