--- a/DailyDiary/App.config
+++ b/DailyDiary/App.config
@@ -73,6 +73,12 @@
       <setting name="s_SingleUserMode" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="s_AskBeforeChange" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="s_SingleUserUsername" serializeAs="String">
+        <value />
+      </setting>
     </DailyDiary.Properties.Settings>
   </userSettings>
 </configuration>
