started work on user based settings

--- a/DailyDiary/App.config
+++ b/DailyDiary/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="DailyDiary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -17,27 +17,21 @@
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     </providers>
   </entityFramework>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="System.Data.SQLite.EF6" />
-      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
-  </system.data>
   <userSettings>
     <DailyDiary.Properties.Settings>
-      <setting name="s_dayColor" serializeAs="String">
+      <setting name="s_day_DayColor" serializeAs="String">
         <value>LightGray</value>
       </setting>
-      <setting name="s_sundayColor" serializeAs="String">
+      <setting name="s_day_SundayColor" serializeAs="String">
         <value>Red</value>
       </setting>
-      <setting name="s_mainBackgroundColor" serializeAs="String">
+      <setting name="s_day_MainBackgroundColor" serializeAs="String">
         <value>White</value>
       </setting>
-      <setting name="s_textboxBackgroundColor" serializeAs="String">
+      <setting name="s_day_TextboxBackgroundColor" serializeAs="String">
         <value>White</value>
       </setting>
-      <setting name="s_textColor" serializeAs="String">
+      <setting name="s_day_TextColor" serializeAs="String">
         <value>Black</value>
       </setting>
       <setting name="s_night_MainBackgroundColor" serializeAs="String">
@@ -55,20 +49,20 @@
       <setting name="s_night_SundayColor" serializeAs="String">
         <value>255, 128, 0</value>
       </setting>
-      <setting name="s_dayTextColor" serializeAs="String">
+      <setting name="s_day_DayTextColor" serializeAs="String">
         <value>Black</value>
       </setting>
       <setting name="s_night_DayTextColor" serializeAs="String">
         <value>Gainsboro</value>
       </setting>
       <setting name="s_textboxLightCursor" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="s_PanelClosed" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="s_textboxLightCursorNightOnly" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="s_SingleUserMode" serializeAs="String">
         <value>False</value>
@@ -79,6 +73,47 @@
       <setting name="s_SingleUserUsername" serializeAs="String">
         <value />
       </setting>
+      <setting name="s_NightMode" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_day_SelectedDayColor" serializeAs="String">
+        <value>Green</value>
+      </setting>
+      <setting name="s_night_SelectedDayColor" serializeAs="String">
+        <value>Yellow</value>
+      </setting>
+      <setting name="s_day_TextSelectionBrush" serializeAs="String">
+        <value>Highlight</value>
+      </setting>
+      <setting name="s_night_TextSelectionBrush" serializeAs="String">
+        <value>DarkGoldenrod</value>
+      </setting>
+      <setting name="s_tbLanguage" serializeAs="String">
+        <value>en-US</value>
+      </setting>
+      <setting name="s_tbSpellCheck" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_tbWordWrap" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_tbAlign" serializeAs="String">
+        <value>0</value>
+      </setting>
     </DailyDiary.Properties.Settings>
   </userSettings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+  </system.data>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
