--- a/DailyDiary/Properties/Settings.settings
+++ b/DailyDiary/Properties/Settings.settings
@@ -2,19 +2,19 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DailyDiary.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="s_dayColor" Type="System.Drawing.Color" Scope="User">
+    <Setting Name="s_day_DayColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">LightGray</Value>
     </Setting>
-    <Setting Name="s_sundayColor" Type="System.Drawing.Color" Scope="User">
+    <Setting Name="s_day_SundayColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Red</Value>
     </Setting>
-    <Setting Name="s_mainBackgroundColor" Type="System.Drawing.Color" Scope="User">
+    <Setting Name="s_day_MainBackgroundColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">White</Value>
     </Setting>
-    <Setting Name="s_textboxBackgroundColor" Type="System.Drawing.Color" Scope="User">
+    <Setting Name="s_day_TextboxBackgroundColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">White</Value>
     </Setting>
-    <Setting Name="s_textColor" Type="System.Drawing.Color" Scope="User">
+    <Setting Name="s_day_TextColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Black</Value>
     </Setting>
     <Setting Name="s_night_MainBackgroundColor" Type="System.Drawing.Color" Scope="User">
@@ -32,20 +32,20 @@
     <Setting Name="s_night_SundayColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">255, 128, 0</Value>
     </Setting>
-    <Setting Name="s_dayTextColor" Type="System.Drawing.Color" Scope="User">
+    <Setting Name="s_day_DayTextColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Black</Value>
     </Setting>
     <Setting Name="s_night_DayTextColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Gainsboro</Value>
     </Setting>
     <Setting Name="s_textboxLightCursor" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="s_PanelClosed" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="s_textboxLightCursorNightOnly" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="s_SingleUserMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
@@ -55,6 +55,33 @@
     </Setting>
     <Setting Name="s_SingleUserUsername" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="s_NightMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="s_day_SelectedDayColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Green</Value>
+    </Setting>
+    <Setting Name="s_night_SelectedDayColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Yellow</Value>
+    </Setting>
+    <Setting Name="s_day_TextSelectionBrush" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Highlight</Value>
+    </Setting>
+    <Setting Name="s_night_TextSelectionBrush" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">DarkGoldenrod</Value>
+    </Setting>
+    <Setting Name="s_tbLanguage" Type="System.String" Scope="User">
+      <Value Profile="(Default)">en-US</Value>
+    </Setting>
+    <Setting Name="s_tbSpellCheck" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="s_tbWordWrap" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="s_tbAlign" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
