--- a/DailyDiary/packages.config
+++ b/DailyDiary/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
-  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Google.Apis" version="1.36.1" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.36.1" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.36.1" targetFramework="net461" />
+  <package id="Google.Apis.Gmail.v1" version="1.36.1.1342" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net461" />
 </packages>
